Bug 1865049 - [devtools] Fix grid panel select node button alignment. r=devtools-reviewers,ochameau.
Differential Revision: https://phabricator.services.mozilla.com/D193631

--- a/devtools/client/themes/layout.css
+++ b/devtools/client/themes/layout.css
@@ -58,7 +58,7 @@
   margin-inline-start: -3px;
 }
 
-.layout-content .open-inspector {
+.layout-content button.open-inspector {
   vertical-align: middle;
 }
 
